Fixed #9. Scroll bar is now used to handle overflow in the description textarea element

--- a/css/popup.css
+++ b/css/popup.css
@@ -126,4 +126,9 @@ input[type=text] {
 .input-field label.active {
   transform: translateY(-90%); }
 
+#textarea1 {
+  overflow-y: auto;
+  height: 50px;
+  max-height: 50px; }
+
 /*# sourceMappingURL=popup.css.map */
